--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,10 @@
 
     <button class="button">Login</button>
   </div>
-  @if(emailCtrl.touched && pwdCtrl.touched && loginForm.form.invalid){
-      <p class="control-error">form not valid at this moment</p>
+  @if(emailCtrl.touched && emailCtrl.dirty && emailCtrl.invalid){
+      <p class="control-error">Invalid email address.</p>
   }
+  @if(pwdCtrl.touched && pwdCtrl.dirty && pwdCtrl.invalid){
+    <p class="control-error">Invalid password.</p>
+}
 </form>
