Building Custom Validators.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,6 +19,6 @@
     <p class="control-error">Email is not in the right format.</p>
   }
   @if(isInvalidPwd){
-    <p class="control-error">Password is not in the right format. Must have min 6 characters</p>
+    <p class="control-error">Password is not in the right format. Must have min 6 characters and one or several number</p>
   }
 </form>
