--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -100,7 +100,7 @@
     </div>
   </div>
 
-  <fieldset>
+  <fieldset formArrayName="source">
     <legend>How did you find us?</legend>
     <div class="control">
       <input
@@ -108,6 +108,7 @@
         id="google"
         name="acquisition"
         value="google"
+        formControlName="0"
       />
       <label for="google">Google</label>
     </div>
@@ -118,6 +119,7 @@
         id="friend"
         name="acquisition"
         value="friend"
+        formControlName="1"
       />
       <label for="friend">Referred by friend</label>
     </div>
@@ -128,6 +130,7 @@
         id="other"
         name="acquisition"
         value="other"
+        formControlName="2"
       />
       <label for="other">Other</label>
     </div>
