--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,6 +1,4 @@
-<form  
-[formGroup]="signUpForm" 
-(ngSubmit)="onSubmit()">
+<form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
   <h2>Welcome on board!</h2>
   <p>We just need a little bit of data from you to get you started 🚀</p>
 
@@ -12,24 +10,19 @@
   <div class="control-row" formGroupName="passwords">
     <div class="control">
       <label for="password">Password</label>
-      <input
-        id="password"
-        type="password"
-        name="password"
-        formControlName="password"
-      />
+      <input id="password" type="password" name="password" formControlName="password" />
     </div>
-
     <div class="control">
       <label for="confirm-password">Confirm Password</label>
-      <input
-        id="confirm-password"
-        type="password"
-        name="confirm-password"
-        formControlName="confirmPassword"
-      />
+      <input id="confirm-password" type="password" name="confirm-password" formControlName="confirmPassword" />
     </div>
+
   </div>
+  @if(signUpForm.controls.passwords.touched
+  && signUpForm.controls.passwords.dirty
+  && signUpForm.controls.passwords.invalid){
+  <p class="control-error">Password must have min 6 characters and must match.</p>
+  }
 
   <hr />
 
@@ -37,22 +30,12 @@
     <div class="control-row">
       <div class="control">
         <label for="first-name">First Name</label>
-        <input
-          type="text"
-          id="first-name"
-          name="first-name"
-          formControlName="firstName"
-        />
+        <input type="text" id="first-name" name="first-name" formControlName="firstName" />
       </div>
 
       <div class="control">
         <label for="last-name">Last Name</label>
-        <input
-          type="text"
-          id="last-name"
-          name="last-name"
-          formControlName="lastName"
-        />
+        <input type="text" id="last-name" name="last-name" formControlName="lastName" />
       </div>
     </div>
 
@@ -62,24 +45,24 @@
       <div class="control-row">
         <div class="control">
           <label for="street">Street</label>
-          <input type="text" id="street" name="street"  formControlName="street"/>
+          <input type="text" id="street" name="street" formControlName="street" />
         </div>
 
         <div class="control">
           <label for="number">Number</label>
-          <input type="text" id="number" name="number" formControlName="number"/>
+          <input type="text" id="number" name="number" formControlName="number" />
         </div>
       </div>
 
       <div class="control-row">
         <div class="control">
           <label for="postal-code">Postal Code</label>
-          <input type="text" id="postal-code" name="postal-code"  formControlName="postalCode"/>
+          <input type="text" id="postal-code" name="postal-code" formControlName="postalCode" />
         </div>
 
         <div class="control">
           <label for="city">City</label>
-          <input type="text" id="city" name="city" formControlName="city"/>
+          <input type="text" id="city" name="city" formControlName="city" />
         </div>
       </div>
     </fieldset>
@@ -103,35 +86,17 @@
   <fieldset formArrayName="source">
     <legend>How did you find us?</legend>
     <div class="control">
-      <input
-        type="checkbox"
-        id="google"
-        name="acquisition"
-        value="google"
-        formControlName="0"
-      />
+      <input type="checkbox" id="google" name="acquisition" value="google" formControlName="0" />
       <label for="google">Google</label>
     </div>
 
     <div class="control">
-      <input
-        type="checkbox"
-        id="friend"
-        name="acquisition"
-        value="friend"
-        formControlName="1"
-      />
+      <input type="checkbox" id="friend" name="acquisition" value="friend" formControlName="1" />
       <label for="friend">Referred by friend</label>
     </div>
 
     <div class="control">
-      <input
-        type="checkbox"
-        id="other"
-        name="acquisition"
-        value="other"
-        formControlName="2"
-      />
+      <input type="checkbox" id="other" name="acquisition" value="other" formControlName="2" />
       <label for="other">Other</label>
     </div>
   </fieldset>
@@ -139,16 +104,14 @@
   <div class="control-row">
     <div class="control">
       <label for="terms-and-conditions">
-        <input
-          type="checkbox"
-          id="terms-and-conditions"
-          name="terms"
-          formControlName="agree"
-        />
+        <input type="checkbox" id="terms-and-conditions" name="terms" formControlName="agree" />
         I agree to the terms and conditions
       </label>
     </div>
   </div>
+  @if(signUpForm.touched && signUpForm.invalid){
+  <p class="control-error">Invalid form</p>
+  }
 
   <p class="form-actions">
     <button type="reset" class="button button-flat" (click)="onReset()">Reset</button>
